--- a/trash/1index.html
+++ b/trash/1index.html
@@ -3,77 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grid Layout</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<div class="wrapper">
-<header class="headerContainer">
-        <div class="headerContent">
+<body>
+    <header class="header-grid">
+        <div class="bg-image"></div>
+        <div class="content-wrap">
             <h1>Welcome to Acme Web Solutions</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci eum error earum soluta voluptatum
                 nisi laboriosam eos saepe asperiores dolorum.</p>
             <a href="#section-b" class="btn">Read More</a>
         </div>
-</header>
-<main class="mainContainer">
-       <!-- Section A -->
-    <section class="section-a">
-            <h2 class="content-title">Web & Application Development</h2>
-            <div class="content-text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe sint eligendi possimus? Unde
-                    officiis magnam laborum ipsa distinctio odio, vero dolores dicta aliquam aperiam repellendus.
-                    Perferendis officiis deserunt velit voluptas nobis sequi
-                    animi totam, accusantium, ex eius quia, natus quo?</p>
+    </header>
+    <main id="main">
+        <!-- Section A -->
+        <section id="section-a" class=>
+            <div class="content-wrap">
+                <h2 class="content-title">Web & Application Development</h2>
+                <div class="content-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe sint eligendi possimus? Unde
+                        officiis magnam laborum ipsa distinctio odio, vero dolores dicta aliquam aperiam repellendus.
+                        Perferendis officiis deserunt velit voluptas nobis sequi
+                        animi totam, accusantium, ex eius quia, natus quo?</p>
+                </div>
             </div>
-    </section>
+        </section>
          <!-- Section B -->
-    <section class="mainContainerB">
-            <div class="cardContainer">
+         <section id="section-b" class="grid">
+            <ul>
+                <li>
                     <div class="card">
-                        <div class="cardImage">
                         <img src="./images/handOnNote.jpeg" alt="">
-                        </div>
                         <div class="card-content">
                             <h3 class="card-title">Web Development</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et
                                 quasi velit voluptatum cum maiores exercitationem.</p>
                         </div>
                     </div>
+                </li>
+                <li>
                     <div class="card">
-                        <div class="cardImage">
                         <img src="./images/Phone.jpeg" alt="">
-                        </div>
                         <div class="card-content">
                             <h3 class="card-title">Mobile Applications</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et
                                 quasi velit voluptatum cum maiores exercitationem.</p>
                         </div>
                     </div>
+                </li>
+                <li>
                     <div class="card">
-                        <div class="cardImage">
                         <img src="./images/tabOnNote.jpeg" alt="">
-                        </div>
                         <div class="card-content">
                             <h3 class="card-title">Tech Marketing</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et
                                 quasi velit voluptatum cum maiores exercitationem.</p>
                         </div>
                     </div>
-            </div>
-       
+                </li>
+            </ul>
+        </section>
 
         <!-- Section C -->
-        <section class="section-c">
+        <section id="section-c" class="grid">
             <div class="content-wrap">
                 <h2 class="content-title">We handle all of your digital needs</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime nam rerum vel earum error fugiat
-                    cupclassitate, dolore eius! Minus, explicabo.</p>
+                    cupiditate, dolore eius! Minus, explicabo.</p>
             </div>
         </section>
 
         <!-- Section D -->
-        <section class="section-d">
+        <section id="section-d" class="grid">
             <div class="box">
                 <h2 class="content-title">Contact Us</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, suscipit. Rerum ducimus a quod, ut et
@@ -87,16 +90,12 @@
                     aut suscipit amet temporibus quo?</p>
             </div>
         </section>
-    </section>
-</main>
+    </main>
 
     <!-- Footer -->
-<footer class="footer" >
+    <footer id="main-footer" class="grid">
         <div>Acme Web Solutions</div>
         <div>Project By <a href="http://traversymedia.com" target="_blank">Traversy Media</a></div>
-</footer>
-</div>
-<body>
-    
+    </footer>
 </body>
 </html>
