--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
 </head>
 <div class="wrapper">
 <header class="headerContainer">
-        <div class="headerContent">
+        <div class="headerContent"></div>
             <h1>Welcome to Acme Web Solutions</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci eum error earum soluta voluptatum
                 nisi laboriosam eos saepe asperiores dolorum.</p>
-            <a href="#section-b" class="btn">Read More</a>
-        </div>
+            <a href="#sectionB" class="btn">Read More</a>
 </header>
 <main class="mainContainer">
        <!-- Section A -->
-    <section class="section-a">
-            <h2 class="content-title">Web & Application Development</h2>
-            <div class="content-text">
+    <section class="sectionA">
+            <h2 class="contentTitle">Web & Application Development</h2>
+            <div class="contentText">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe sint eligendi possimus? Unde
                     officiis magnam laborum ipsa distinctio odio, vero dolores dicta aliquam aperiam repellendus.
                     Perferendis officiis deserunt velit voluptas nobis sequi
@@ -28,52 +27,51 @@
             </div>
     </section>
          <!-- Section B -->
-    <section class="mainContainerB">
+    <section id="sectionB">
             <div class="cardContainer">
                     <div class="card">
                         <div class="cardImage">
-                        <img src="./images/handOnNote.jpeg" alt="">
+                             <img src="./images/handOnNote.jpeg" alt="Hand on the Note">
                         </div>
-                        <div class="card-content">
-                            <h3 class="card-title">Web Development</h3>
+                        <div class="cardContent">
+                            <h3 class="cardTitle">Web Development</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et
                                 quasi velit voluptatum cum maiores exercitationem.</p>
                         </div>
                     </div>
                     <div class="card">
                         <div class="cardImage">
-                        <img src="./images/Phone.jpeg" alt="">
+                            <img src="./images/Phone.jpeg" alt="Phone">
                         </div>
-                        <div class="card-content">
-                            <h3 class="card-title">Mobile Applications</h3>
+                        <div class="cardContent">
+                            <h3 class="cardTitle">Mobile Applications</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et
                                 quasi velit voluptatum cum maiores exercitationem.</p>
                         </div>
                     </div>
                     <div class="card">
                         <div class="cardImage">
-                        <img src="./images/tabOnNote.jpeg" alt="">
+                            <img src="./images/tabOnNote.jpeg" alt="Tab">
                         </div>
-                        <div class="card-content">
-                            <h3 class="card-title">Tech Marketing</h3>
+                        <div class="cardContent">
+                            <h3 class="cardTitle">Tech Marketing</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et
                                 quasi velit voluptatum cum maiores exercitationem.</p>
                         </div>
                     </div>
             </div>
-       
 
         <!-- Section C -->
-        <section class="section-c">
-            <div class="content-wrap">
-                <h2 class="content-title">We handle all of your digital needs</h2>
+        <section class="sectionC">
+            <div class="contentWrap">
+                <h2 class="contentTitle">We handle all of your digital needs</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime nam rerum vel earum error fugiat
                     cupclassitate, dolore eius! Minus, explicabo.</p>
             </div>
         </section>
 
         <!-- Section D -->
-        <section class="section-d">
+        <section class="sectionD">
             <div class="box">
                 <h2 class="content-title">Contact Us</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, suscipit. Rerum ducimus a quod, ut et
