--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grid Layout</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <div class="wrapper">
@@ -73,13 +73,13 @@
         <!-- Section D -->
         <section class="sectionD">
             <div class="box">
-                <h2 class="content-title">Contact Us</h2>
+                <h2 class="contentTitle">Contact Us</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, suscipit. Rerum ducimus a quod, ut et
                     voluptas obcaecati unde fuga.</p>
                 <p>contact@acmewebsolutions.test</p>
             </div>
             <div class="box">
-                <h2 class="content-title">About Our Company</h2>
+                <h2 class="contentTitle">About Our Company</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum porro deserunt, deleniti,
                     quae facere repudiandae, officiis est exercitationem nobis iusto doloremque! Soluta excepturi in
                     aut suscipit amet temporibus quo?</p>
